--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-    <script src="http://petlatkea.dk/2018/front/foobar.js"></script>
+    <script src="foobar.js"></script>
     <script src="main.js"></script>
 </body>
 
